--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,11 +62,14 @@ test = [
     "pytest-cov>=4.1.0",
     "pytest-mock>=3.12.0",
     "coverage>=7.4.0",
+    # Note: CVE-2022-42969 in py package is disputed and can be ignored
+    # See: https://github.com/pytest-dev/pytest/issues/10392
 ]
 security = [
     "bandit>=1.7.0",
     "safety>=3.0.0",
     "ruff>=0.3.0",
+    "sentence-transformers>=3.1.0",  # Fix for PVE-2024-73169
 ]
 
 [tool.black]
