--- a/src/cylestio_monitor/config/default_config.yaml
+++ b/src/cylestio_monitor/config/default_config.yaml
@@ -14,6 +14,11 @@ security:
         - "password"
         - "secret"
         - "credential"
+        - "credit card"
+        - "ssn"
+        - "social security"
+        - "account number"
+        - "personal data"
 
     dangerous_commands:
       enabled: true
@@ -94,15 +99,15 @@ security:
 
     email_address:
       regex: "\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}\\b"
-      category: "sensitive_data"
-      severity: "medium"
+      category: "private_data"
+      severity: "low"
       description: "Email Address"
       mask_method: "email"
 
     phone_number:
       regex: "\\b\\d{3}[-.\\s]?\\d{3}[-.\\s]?\\d{4}\\b"
-      category: "sensitive_data"
-      severity: "medium"
+      category: "private_data"
+      severity: "low"
       description: "Phone Number"
       mask_method: "phone"
 
@@ -171,10 +176,12 @@ data_masking:
       regex: "\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b"
       replacement: "[EMAIL]"
       mask_method: "email"
+      category: "private_data"
     - name: "phone"
       regex: "\\b(?:\\+\\d{1,2}\\s?)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}\\b"
       replacement: "[PHONE]"
       mask_method: "phone"
+      category: "private_data"
     - name: "ip_address"
       regex: "\\b(?:\\d{1,3}\\.){3}\\d{1,3}\\b"
       replacement: "[IP_ADDRESS]"
